--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
 <head>
-<title>Battery Passport</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Battery Passports – DMP Teknik</title>
+  <style>
+    body{font-family:Arial, sans-serif; max-width:900px; margin:auto; padding:20px; background:#f7f7f7;}
+    h1{color:#003366;}
+    .box{background:#fff; padding:15px; margin:12px 0; border-left:5px solid #003366;}
+    a{color:#003366; text-decoration:none;}
+    a:hover{text-decoration:underline;}
+    .small{color:#666; font-size:12px;}
+  </style>
 </head>
 <body>
- <h1>Battery passport- fungerar</h1>
- <p>Github Pages är korrekt aktiverat.</p>
+  <h1>Battery Passports – DMP Teknik</h1>
+  <p>Välj batteri:</p>
+
+  <div class="box">
+    <b>BP-96V-800Ah-001</b><br>
+    LFP • 96 V • 800 Ah • 76,8 kWh<br>
+    <a href="bp-bp-96v-800ah-001.html">Öppna Battery Passport →</a>
+  </div>
+
+  <p class="small">
+    Versionhanteras via GitHub. QR-koder kan peka direkt på respektive Battery Passport-sida.
+  </p>
 </body>
 </html>
