--- a/bp-bp-96v-800ah-001.html
+++ b/bp-bp-96v-800ah-001.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Battery Passport – BP-96V-800Ah-001</title>
+  <title>Battery Passport – BP-96V-1200Ah-001</title>
   <style>
     body{font-family:Arial, sans-serif; max-width:900px; margin:auto; padding:20px; background:#f7f7f7;}
     h1,h2{color:#003366;}
@@ -20,14 +20,14 @@
   <p><a href="index.html">← Tillbaka till lista</a></p>
 
   <h1>Battery Passport</h1>
-  <p><b>Battery ID:</b> BP-96V-800Ah-001</p>
+  <p><b>Battery ID:</b> BP-96V-1200Ah-001</p>
 
   <div class="box">
     <h2>Allmän information</h2>
     <table>
-      <tr><td>Tillverkare / Ansvarig</td><td>DMP Teknik AB</td></tr>
-      <tr><td>Avsett användningsområde</td><td>Industriellt / Hybridkraftsystem</td></tr>
-      <tr><td>Tillverkningsland</td><td>China</td></tr>
+      <tr><td>Tillverkare / Ansvarig</td><td>MERLINUM Forklift</td></tr>
+      <tr><td>Avsett användningsområde</td><td>Industriellt Truckbatteri</td></tr>
+      <tr><td>Tillverkningsland</td><td>Kina</td></tr>
       <tr><td>Serienummer</td><td>—</td></tr>
     </table>
   </div>
@@ -37,9 +37,9 @@
     <table>
       <tr><td>Kemi</td><td>LFP (LiFePO₄)</td></tr>
       <tr><td>Nominell spänning</td><td>96 V</td></tr>
-      <tr><td>Kapacitet</td><td>800 Ah</td></tr>
-      <tr><td>Energi</td><td>76,8 kWh</td></tr>
-      <tr><td>Vikt</td><td>~620 kg</td></tr>
+      <tr><td>Kapacitet</td><td>1200 Ah</td></tr>
+      <tr><td>Energi</td><td>115,2 kWh</td></tr>
+      <tr><td>Vikt</td><td>~2800 kg</td></tr>
     </table>
   </div>
 
@@ -48,19 +48,78 @@
     <ul>
       <li>UN 38.3: Transporttest (PDF-länk kan läggas här)</li>
       <li>CE / DoC: För produktens tillämpliga direktiv/regler (PDF-länk kan läggas här)</li>
-      <li>Övriga testrapporter: (PDF-länk kan läggas här)</li>
     </ul>
-    <p class="small">Tips: Lägg PDF i repot och länka med t.ex. <code>&lt;a href="docs/un38_3.pdf"&gt;</code></p>
   </div>
 
   <div class="box">
-    <h2>Carbon Footprint</h2>
-    <table>
-      <tr><td>Status</td><td>Datainsamling pågår</td></tr>
-      <tr><td>Metod</td><td>—</td></tr>
-      <tr><td>Resultat</td><td>— kg CO₂e / kWh</td></tr>
-    </table>
-  </div>
+  <h2>Carbon Footprint (Transport – WtW)</h2>
+
+  <table>
+    <tr>
+      <td>Status</td>
+      <td>
+        Delvis beräknad – transportfas
+        <br><span class="small">Gäller till och med ankomst Sverige: 2026-01-28</span>
+      </td>
+    </tr>
+
+    <tr>
+      <td>Systemgräns</td>
+      <td>
+        Main carriage (sjö) + post carriage (landtransport EU)<br>
+        <span class="small">Exkluderar: råmaterial, celltillverkning, packproduktion</span>
+      </td>
+    </tr>
+
+    <tr>
+      <td>Metod</td>
+      <td>Well-to-Wheel (WtW), transportberäkning från logistikleverantör</td>
+    </tr>
+
+    <tr>
+      <td>Datakällor</td>
+      <td>
+        SZX31183524<br>
+        SZX31184007<br>
+        SZX31184363<br>
+        SZX31184775
+      </td>
+    </tr>
+
+    <tr>
+      <td>Transport – sjö (Main carriage)</td>
+      <td>
+        17 053 kg CO₂e<br>
+        <span class="small">Distans: 93 813 km (routing runt Sydafrika)</span>
+      </td>
+    </tr>
+
+    <tr>
+      <td>Transport – land (Post carriage)</td>
+      <td>
+        5 292 kg CO₂e<br>
+        <span class="small">Distans: 1 445 km</span>
+      </td>
+    </tr>
+
+    <tr>
+      <td><b>Total transportpåverkan</b></td>
+      <td><b>22 345 kg CO₂e (WtW)</b></td>
+    </tr>
+
+    <tr>
+      <td>Normalisering</td>
+      <td>
+        Ej normaliserad per kWh ännu<br>
+        <span class="small">Plan: kg CO₂e / kWh enligt EU Battery Regulation</span>
+      </td>
+    </tr>
+  </table>
+
+  <p class="small">
+    Not: Transporten har gått runt Sydafrika vilket påverkar total distans och utsläpp.
+  </p>
+</div>
 
   <div class="box">
     <h2>Spårbarhet</h2>
