--- a/bp-bp-96v-800ah-001.html
+++ b/bp-bp-96v-800ah-001.html
@@ -66,14 +66,17 @@
     <tr>
       <td>Systemgräns</td>
       <td>
-        Main carriage (sjö) + post carriage (landtransport EU)<br>
-        <span class="small">Exkluderar: råmaterial, celltillverkning, packproduktion</span>
+        Main carriage (sjö) + post carriage (Truck transports China)<br>
       </td>
     </tr>
 
     <tr>
       <td>Metod</td>
-      <td>Well-to-Wheel (WtW), transportberäkning från logistikleverantör</td>
+      <td>Well-to-Wheel (WtW)</td>
+      <td>
+        11 365 kg CO₂e<br>
+        <span class="small">Total material and production</span>
+      </td>
     </tr>
 
     <tr>
@@ -89,7 +92,7 @@
     <tr>
       <td>Transport – sjö (Main carriage)</td>
       <td>
-        17 053 kg CO₂e<br>
+        5 688 kg CO₂e<br>
         <span class="small">Distans: 93 813 km (routing runt Sydafrika)</span>
       </td>
     </tr>
@@ -103,7 +106,7 @@
     </tr>
 
     <tr>
-      <td><b>Total transportpåverkan</b></td>
+      <td><b>Total påverkan</b></td>
       <td><b>22 345 kg CO₂e (WtW)</b></td>
     </tr>
 
@@ -123,12 +126,9 @@
 
   <div class="box">
     <h2>Spårbarhet</h2>
-    <p>Batch/leverantörsdata för celler, BMS och kritiska komponenter hanteras internt och kan lämnas vid behov.</p>
+    <p>Batch/leverantörsdata för celler, och kritiska komponenter hanteras internt och kan lämnas vid behov.</p>
   </div>
 
-  <p class="small">
-    Denna sida är en digital Battery Passport-sida. QR-kod kan peka hit.
-  </p>
 
 </body>
 </html>
