--- a/bp-bp-96v-800ah-001.html
+++ b/bp-bp-96v-800ah-001.html
@@ -48,6 +48,7 @@
     <ul>
       <li>UN 38.3: Transporttest (PDF-länk kan läggas här)</li>
       <li>CE / DoC: För produktens tillämpliga direktiv/regler (PDF-länk kan läggas här)</li>
+      <li>CE / REACH: För produktens tillämpliga direktiv/regler (PDF-länk kan läggas här)</li>
     </ul>
   </div>
 
@@ -66,19 +67,22 @@
     <tr>
       <td>Systemgräns</td>
       <td>
-        Main carriage (sjö) + post carriage (Truck transports China)<br>
+        MAnufactuing + Main carriage (sjö) + post carriage (Truck transports in China)<br>
       </td>
     </tr>
 
     <tr>
-      <td>Metod</td>
-      <td>Well-to-Wheel (WtW)</td>
-      <td>
-        11 365 kg CO₂e<br>
+  <td>Metod</td>
+  <td>
+    <div class="row-flex">
+      <div>Well-to-Wheel (WtW)</div>
+      <div class="cf-callout">
+        <b>11 365 kg CO₂e</b><br>
         <span class="small">Total material and production</span>
-      </td>
-    </tr>
-
+      </div>
+    </div>
+  </td>
+</tr>
     <tr>
       <td>Datakällor</td>
       <td>
