--- a/bp-bp-96v-800ah-001.html
+++ b/bp-bp-96v-800ah-001.html
@@ -67,7 +67,7 @@
     <tr>
       <td>Systemgräns</td>
       <td>
-        MAnufactuing + Main carriage (sjö) + post carriage (Truck transports in China)<br>
+        Manufacturing + Main carriage (sjö) + post carriage (Truck transports in China)<br>
       </td>
     </tr>
 
@@ -77,7 +77,7 @@
     <div class="row-flex">
       <div>Well-to-Wheel (WtW)</div>
       <div class="cf-callout">
-        <b>11 365 kg CO₂e</b><br>
+        11 365 kg CO₂e<br>
         <span class="small">Total material and production</span>
       </div>
     </div>
