--- a/bp-bp-96v-800ah-001.html
+++ b/bp-bp-96v-800ah-001.html
@@ -28,7 +28,7 @@
       <tr><td>Tillverkare / Ansvarig</td><td>MERLINUM Forklift</td></tr>
       <tr><td>Avsett användningsområde</td><td>Industriellt Truckbatteri</td></tr>
       <tr><td>Tillverkningsland</td><td>Kina</td></tr>
-      <tr><td>Serienummer</td><td>—</td></tr>
+      <tr><td>Serienummer XXXX-XX</td><td>—</td></tr>
     </table>
   </div>
 
@@ -48,7 +48,7 @@
     <ul>
       <li>UN 38.3: Transporttest (PDF-länk kan läggas här)</li>
       <li>CE / DoC: För produktens tillämpliga direktiv/regler (PDF-länk kan läggas här)</li>
-      <li>CE / REACH: För produktens tillämpliga direktiv/regler (PDF-länk kan läggas här)</li>
+      <li>REACH: För produktens tillämpliga direktiv/regler (PDF-länk kan läggas här)</li>
     </ul>
   </div>
 
@@ -59,7 +59,7 @@
     <tr>
       <td>Status</td>
       <td>
-        Delvis beräknad – transportfas
+        Delvis beräknad 
         <br><span class="small">Gäller till och med ankomst Sverige: 2026-01-28</span>
       </td>
     </tr>
