--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Battery Passports – DMP Teknik</title>
+  <title>Battery Passports – Mer-lion</title>
   <style>
     body{font-family:Arial, sans-serif; max-width:900px; margin:auto; padding:20px; background:#f7f7f7;}
     h1{color:#003366;}
