--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
   </style>
 </head>
 <body>
-  <h1>Battery Passports – DMP Teknik</h1>
+  <h1>Battery Passports – Mer-Lion</h1>
   <p>Välj batteri:</p>
 
   <div class="box">
-    <b>BP-96V-800Ah-001</b><br>
-    LFP • 96 V • 800 Ah • 76,8 kWh<br>
+    <b>BP-96V-1200Ah-001</b><br>
+    LFP • 96 V • 1200 Ah • 115,2 kWh<br>
     <a href="bp-bp-96v-800ah-001.html">Öppna Battery Passport →</a>
   </div>
 
   <p class="small">
-    Versionhanteras via GitHub. QR-koder kan peka direkt på respektive Battery Passport-sida.
+    för info: QR-koder kan peka direkt på respektive Battery Passport-sida.
   </p>
 </body>
 </html>
